Resolve "Start Wheel Home"

--- a/resources/langs/vi.json
+++ b/resources/langs/vi.json
@@ -1,6 +1,7 @@
 {
-    "app_name": "Lucid Decision",
+    "app_name": "Quyết định sáng suốt",
     "edit": "Chỉnh sửa",
     "start": "Bắt đầu",
-    "what_should_i_do_today": "Hôm nay tôi nên làm gì?"
+    "what_should_i_do_today": "Hôm nay tôi nên làm gì?",
+    "share": "Chia sẻ"
 }
