--- a/resources/langs/en.json
+++ b/resources/langs/en.json
@@ -2,5 +2,6 @@
     "app_name": "Lucid Decision",
     "edit": "Edit",
     "start": "Start",
-    "what_should_i_do_today": "What should i do today?"
+    "what_should_i_do_today": "What should i do today?",
+    "share": "Share"
 }
