--- a/resources/langs/vi.json
+++ b/resources/langs/vi.json
@@ -3,5 +3,21 @@
     "edit": "Chỉnh sửa",
     "start": "Bắt đầu",
     "what_should_i_do_today": "Hôm nay tôi nên làm gì?",
-    "share": "Chia sẻ"
+    "share": "Chia sẻ",
+    "setting": "Cài Đặt",
+    "help": "Trợ Giúp",
+    "app_info": "Thông Tin Ứng Dụng",
+    "language": "Ngôn Ngữ",
+    "spin_time": "Thời Gian Quay",
+    "lang_en": "Tiếng Anh",
+    "lang_vi": "Tiếng Việt",
+    "ok": "Ok",
+    "cancel": "Hủy bỏ",
+    "sec_3": "3s: rất nhanh",
+    "sec_5": "5s: nhanh",
+    "sec_7": "7s: hơi nhanh",
+    "sec_10": "10s: bình thường",
+    "sec_12": "12s: hơi chậm",
+    "sec_15": "15s: chậm",
+    "sec_20": "20s: rất chậm"
 }
